--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "license": "MIT",
     "main": "dist/bundle.js",
     "scripts": {
-        "start": "node dist/bundle.dev.js",
+        "start": "node dist/bundle.js",
         "build": "NODE_ENV=production webpack",
         "watch": "NODE_ENV=dev webpack -w",
         "debug": "node --inspect-brk dist/bundle.dev.js"
