--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "main": "dist/bundle.js",
     "scripts": {
         "start": "node dist/bundle.js",
+        "dev": "node dist/bundle.dev.js",
         "build": "NODE_ENV=production webpack",
         "watch": "NODE_ENV=dev webpack -w",
         "debug": "node --inspect-brk dist/bundle.dev.js"
